--- a/pom.xml
+++ b/pom.xml
@@ -99,7 +99,15 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-
+    
+    <dependencies>
+        <dependency>
+           <groupId>org.jfrog.test</groupId>
+           <artifactId>multi1</artifactId>
+           <version>2.17-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+    
     <build>
         <defaultGoal>install</defaultGoal>
         <plugins>
